# knotdeviceinfo

./: CMakeLists.txt  LEGAL  LICENSE  README.md
example/: CMakeLists.txt  example.c
include/knot/: deviceinfo.h
src/: android.c  base.c  free.c  linux.c  linux.cpp  macos.c  macos.cpp  macos.m  macos_obj.mm  noop.c  os.h  target.h  windows.c  windows.cpp
